# ChangeLog for dev-perl/Class-Singleton
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Singleton/ChangeLog,v 1.32 2013/04/16 20:36:54 ago Exp $

  16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> Class-Singleton-1.400.0.ebuild:
  Stable for ppc64, wrt bug #456568

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org>
  Class-Singleton-1.400.0.ebuild:
  Marked ~ppc-aix, bug #432288

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Class-Singleton-1.4.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Class-Singleton-1.400.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Class-Singleton-1.400.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org>
  +Class-Singleton-1.400.0.ebuild:
  Change version scheme

  29 May 2011; Fabian Groffen <grobian@gentoo.org> Class-Singleton-1.4.ebuild:
  Marked ~x64-macos, bug #368553

  08 Jan 2011; Jeroen Roovers <jer@gentoo.org> Class-Singleton-1.4.ebuild:
  Stable for HPPA (bug #350877).

  08 Jan 2011; Raúl Porcel <armin76@gentoo.org> Class-Singleton-1.4.ebuild:
  arm/s390/sh stable

  03 Dec 2010; Michael Weber <xmw@gentoo.org> Class-Singleton-1.03.ebuild,
  Class-Singleton-1.4.ebuild:
  add ~arm (bug 302981)

  09 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  Class-Singleton-1.4.ebuild:
  Transfer Prefix keywords

  25 Nov 2009; Markus Meier <maekke@gentoo.org> Class-Singleton-1.4.ebuild:
  amd64 stable, bug #284544

  24 Oct 2009; nixnut <nixnut@gentoo.org> Class-Singleton-1.4.ebuild:
  ppc stable #284544

  13 Jun 2008; Raúl Porcel <armin76@gentoo.org> Class-Singleton-1.4.ebuild:
  alpha/ia64/sparc/x86 stable

*Class-Singleton-1.4 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Class-Singleton-1.4.ebuild:
  Version bump

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  Class-Singleton-1.03.ebuild: