@@ -1,15 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Singleton/Class-Singleton-1.03.ebuild,v 1.18 2010/12/03 01:24:12 xmw Exp $
-
-inherit perl-module
-
-DESCRIPTION="Implementation of a Singleton class"
-HOMEPAGE="http://search.cpan.org/~abw/"
-SRC_URI="mirror://cpan/authors/id/A/AB/ABW/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="alpha amd64 ~arm ia64 ppc ppc64 sparc x86 ~x86-fbsd"
-IUSE=""
-DEPEND="dev-lang/perl"
