@@ -1,26 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST Class-Singleton-1.03.tar.gz 7136 SHA256 c644be2f45ac61c56348df7a45f129495a54835fc717d558f45f83caab3109b1 SHA512 f32c707b2d65e47d89e5c41d0434c4aa69f07c24e2a2f09a5b78f54143aeb745a9fa4ded1f04b17168f9f5c3c63ad3c6574aab8d7bdd9c5acdaf1db09fec88f0 WHIRLPOOL 80a067d2d374fea0575e2c8ed494c03bbbe51acb084e12819f8a82fd1d18a8ac1837cfa28ab5811b01219858edadab1495e5790a768bb9a8111ca78e560d0d16
 DIST Class-Singleton-1.4.tar.gz 7793 SHA256 cfafc6e7c842e04fc11cc3e700551461a6aaa0b139470273aea2f29026e79150 SHA512 1e7cbc992840fd454e31d79ea1fa78046f52c6c6c369c005248fc675adb0a28dcc1db6e0ebabf4cc0a9a80d684c164315ec6bd1bb56d451d1f09a829141d2328 WHIRLPOOL 3ea469193b84570842c49a2d533bc53f13d616e61f995a55a488f3a6ef190ed6604cb1c6cf32463870a9a0e8f919c4bb09851ff95fd88d22006ee4df1fb62d71
-EBUILD Class-Singleton-1.03.ebuild 520 SHA256 bc1a06875ca9fcba05f1563e378d84a34df9354b070491cfbbf6a5bdf6d20bd9 SHA512 37c0f9aeb265a190422c8a801f91b60b85c224d3336135592c227ee96d67238a8d8ecbd81b92739f0f6547d2e6ea49410172841c3b131ad438729941d065a17b WHIRLPOOL fc6b5c7f27b0bdc89479da995c3644d71c9b7f57b2403e4c4da2ae6a25b80d4833adc6e1dcc7fac89ec52490093c3f2fdd898ae47b3445e83d0be93658371209
 EBUILD Class-Singleton-1.400.0.ebuild 536 SHA256 998563daf3edfa5c1f4ae644898e234980957fbcb864ce3054cc05d9697c4575 SHA512 2e16a5587c24c4cab2a22794fc2f9dcf26cad8a7531ba086e7c2c3a184590bf82b4c5fdf0f0f77a7462a9f7503f9ba46185ded457a44a661a94fbab757dc761d WHIRLPOOL 10413645309656c5b6de5e7f9799479580be6933cbd95a8f50aac61c938e3dafe790052e2b5aa4d3ea755c9c24e400bd50345318ef39c6b143942799f9788224
-MISC ChangeLog 3696 SHA256 c91c65a3130adcf695f67ac7f3b747173ec4efe7ba97711c481f34b50b806709 SHA512 8c99f2c87cd0e5e690751c2c91d7cce3876590a78ab94dfecb6670424415d61d3d8c48ee7be574aa61d866dc90ce65fe7dbe5e8bb2fa79e17d6efa8a92d28828 WHIRLPOOL 000b90860363898ecc700e5dae5900e26ea0d52377694369651200d3833a77b7e86dee8e0265e079b69bbf5540e22717c8858adf27454b5ea72273ebc61cbb57
+MISC ChangeLog 3808 SHA256 4530fa49ae9f71f03f1d47c8e2ad3162c891903f44fc2d7cc64599269efc7d86 SHA512 27198946bd6dc643f0f9c7e3599d6ddc561e3650e2b8371cf80d74ecf2837f2de6215abf2a18c940e98a97ac327c74c762d6a8ad336069b425794eeeafcfb4ce WHIRLPOOL 988372737449c5387fc546e8e419cc30b38ff796a9277538db31b925bdfc675f733ca7397e4fedb9f8e762d38eb5a84db4ff82efb3c617950df7e9739fe2493d
 MISC metadata.xml 304 SHA256 54bdd975714cc308bf22adb8c38b34d58bbfe82cbbb0fa23565e8d0b4ed4520b SHA512 5c400a24aa704397d2a075710cbc21b2b50d6f383cd0a52776afda9ecb7934a8687336d536b09f988806c76bf272d13ff3164a81f334d33c2d5e7a53fad60902 WHIRLPOOL d53b36ee5832378cb7dabdd1f6011133c11ddc74b07e6548c52eb3e67e23444b24f786de220504b151423147b6cf5c1677caa2691dd4e1ea17c05e39d3147e03
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRbbXMAAoJELp701BxlEWf3lkQALXy7tSYD0xYOH8SZ00W3YfI
-V8CWAPjW7R6ltQx0V2nMwWwnECd01TbNeFaecgKCxPRIQ+SrjMZ6JdNuXLuKhxeM
-VILZsBUGFtcV1bECCwudxoN4kK3NAlksOscGXVa6nAvRzMpGpEwxtih5XbYNHU0N
-7jkCTty96QXTV7VqvuDTatQjv78Br+p3LeeM3POIClqyW3jfgnLwU8fUllOwdfiR
-ivMF1jn0mpSsQp8VwmfITA8m6dRgNnzWM7Eqhb9SyRyBs1A0XIfYk7yQy/xSaYVy
-VXRlkVoS0amm+XlHG+HV8Je/Qbft3w9cmljtshbFdgUnobrR785PlwBlSt1uTs1o
-GclOnPfcXyu0FXmQhhb/2RU6n8Y8zg4sdRVsPQrYgwwcys1VAdgCFhoel6wvPEFu
-bEtkiM2JRCFyBpGjuGATxRrosMGFl9fQjkfnRWSFl9kfvNOgaiTzR8ZLMeF+RA3R
-HjNaQGbxciwglEsD7c4ZapeBx2mbbQbx5ZSvZA/35o8J2iKqQUaOD5rd5rInToaf
-o9PDNmySbL/61LxyUbpLGPwGBYJobmOC6EQSmOJtx/KEn54XEF9dM4WsceK0Ev/d
-P/hbsUeGNHAQ8yftkjXHE9vwnEMxaaeB3PAy4BRxLAdbeljBZHfX93HfWJqV6fGz
-FSMtCfbT/8gVPk7SDbS1
-=0ag2
+iJwEAQEIAAYFAlH4U+sACgkQG9wOWsQutdZPYAQAmo0QysenubHp0qf8dJmpYlYI
+ImGW9B9hvZvZzlrGUhFSgxYPJUUkxEAzlXqV5sTxkZNizXM/0g93o0vubHoEG+gr
+z/Br20fln3msnWh7gqIrb8BJoAnUCfc1j/IJDG2y2EZTS/veKl21SkNQ/z3w+akI
+KB5PZZh7nxPNoAQo7cg=
+=e/i8
 -----END PGP SIGNATURE-----
