@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Class-Singleton
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Singleton/ChangeLog,v 1.32 2013/04/16 20:36:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Singleton/ChangeLog,v 1.33 2013/07/31 00:01:02 zlogene Exp $
+
+  31 Jul 2013; Mikle Kolyada <zlogene@gentoo.org> -Class-Singleton-1.03.ebuild:
+  drop old wrt bug #478740
 
   16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> Class-Singleton-1.400.0.ebuild:
   Stable for ppc64, wrt bug #456568
